updated tests and cases up to usage notification iteration